--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Tour</title>
+    <title>Virtual Tour</title>
 </head>
+
 <body>
     <canvas class="canvas"></canvas>
 </body>
+
 </html>
